更新 websocket reverse proxy.conf

--- a/websocket reverse proxy.conf
+++ b/websocket reverse proxy.conf
@@ -1,7 +1,7 @@
 #websocket反向代理server模块
 server {
     listen 80;
-    server_name x.blazarwingx.life; # 替换成您的域名
+    server_name x.com; # 替换成您的域名
 
     location / {
         return 301 https://$host$request_uri;
@@ -10,7 +10,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name x.blazarwingx.life; # 替换成您的域名
+    server_name x.com; # 替换成您的域名
 
     ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
